# tabela_periodica

./: .env  .gitignore  pyproject.toml
tabela/: app.py  commands.py  config.py  elementos.py  model.py  resources.py
