[tool.poetry]
name = "flask_pg_api"
version = "0.1.0"
description = "Testando a integração no Flask do Postgresql usando SQL Alchemy"
authors = ["Lucas Kemp <lukempol@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
Flask-SQLAlchemy = "^2.5.1"
psycopg = "^3.0.9"
psycopg2 = "^2.9.3"
black = "^22.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
